src/test/ui/parser/bad-value-ident-true.stderr
error: expected identifier, found keyword `true`
  --> $DIR/bad-value-ident-true.rs:3:4
   |
LL | fn true() { } //~ ERROR expected identifier, found keyword `true`
   |    ^^^^ expected identifier, found keyword

error: aborting due to previous error

